tests/unit/default/syntax-error/142-add-fk-alias.e.t
---- IN ----
+FK@alias
---- OUT ----
---- ERR ----
syntax: expected <table> after `+FK@alias` instead of EOL at position 9 - at line 1
---- EXIT ----
1
